--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <button><a href="studens_registration_form.html">Student Registation </a></button>
     <button><a href="Linkedin.html"></a>Linkedin </a></button>
-    <button><a href="">insta</a></button>
+    <button><a href="inst_login.html">insta</a></button>
     <button><a href="">diwali </a></button>
 </body>
 </html>
