--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Digital Computing®-SDITS</h2>
     </div>
     <button><a href="studens_registration_form.html">Student Registation </a></button>
-    <button><a href="Linkedin.html"></a>Linkedin </a></button>
+    <button><a href="Linkedin.html">Linkedin </a></button>
     <button><a href="inst_login.html">insta</a></button>
     <button><a href="">diwali </a></button>
 </body>
