--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <button><a href="studens_registration_form.html">Student Registation </a></button>
     <button><a href="Linkedin.html">Linkedin</a></button>
     <button><a href="inst_login.html">insta</a></button>
-    <button><a href="">diwali </a></button>
+    <button><a href="diwali.html">diwali </a></button>
 </body>
 </html>
