--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div>
-        <h2>Nisha paatel</h2>
+        <h2>Nisha patel</h2>
         <h2>Digital Computing®-SDITS</h2>
     </div>
     <button><a href="studens_registration_form.html">Student Registation </a></button>
