--- a/index.html
+++ b/index.html
@@ -3,42 +3,310 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Portfolio</title>
     <style>
-        *{
+        /* Global Styles */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f5f5f5; /* Light gray background */
+            color: #6a1b9a; /* Deep Purple */
+        }
+
+        h1, h2 {
+            color: #6a1b9a; /* Deep Purple */
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        a {
+            color: #f06292; /* Soft Pink */
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* Navbar */
+        nav {
+            background-color: #cf6c0e; /* Deep Purple */
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 30px;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        nav .logo {
+            font-size: 24px;
+            font-weight: 700;
+            color: white;
+            letter-spacing: 2px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            display: flex;
             margin: 0;
             padding: 0;
         }
-    div{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: hotpink;
-        height: 60px;
-    }
 
-    h2{
-        text-decoration: underline double;
-    }
-    button{
-        margin: 5px;
-        padding: 10px;
-        box-shadow: 0px 0px 0px 0px gray;
-        background-color: skyblue;
-    }
-    button:hover{
-        box-shadow: 1px 1px 1px 1px gray;
-    }
+        nav ul li {
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            font-size: 18px;
+            color: white;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        nav ul li a:hover {
+            color: #fff9c4; /* Light Yellow on hover */
+        }
+
+        /* Header */
+        header {
+            background-color: #f06292; /* Soft Pink */
+            text-align: center;
+            padding: 80px 0;
+            margin-top: 60px; /* Offset the fixed navbar */
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+            border-bottom: 3px solid #fff9c4; /* Light Yellow border */
+        }
+
+        header h1 {
+            font-size: 48px;
+            font-weight: 700;
+            letter-spacing: 3px;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 20px;
+            color: #6a1b9a; /* Deep Purple */
+            margin-top: 5px;
+            font-weight: 400;
+        }
+
+        /* About Section */
+        .about {
+            padding: 80px 20px;
+            text-align: center;
+            background-color: #cecdc7; /* Light Yellow */
+        }
+
+        .about h2 {
+            font-size: 36px;
+            margin-bottom: 15px;
+        }
+
+        .about p {
+            font-size: 20px;
+            line-height: 1.7;
+            max-width: 800px;
+            margin: 0 auto;
+            color: #6a1b9a; /* Deep Purple */
+        }
+
+        /* Projects Section */
+        .projects {
+            padding: 80px 20px;
+            background-color: #cecdc7; /* Light Yellow */
+        }
+
+        .projects h2 {
+            font-size: 36px;
+            margin-bottom: 50px;
+            font-weight: 700;
+            color: #f06292; /* Soft Pink */
+        }
+
+        .project {
+            display: inline-block;
+            width: 300px;
+            background-color: #fff;
+            padding: 25px;
+            margin: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .project img {
+            width: 100%;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
+
+        .project h3 {
+            font-size: 24px;
+            color: #f06292; /* Soft Pink */
+            margin-top: 15px;
+        }
+
+        .project p {
+            font-size: 16px;
+            color: #6a1b9a; /* Deep Purple */
+            line-height: 1.5;
+            margin-top: 10px;
+        }
+
+        .project:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+        }
+
+        .project:hover img {
+            transform: scale(1.05);
+        }
+
+        /* Footer */
+        footer {
+            background-color: #cf6c0e; /* Deep Purple */
+            color: white;
+            padding: 20px;
+            text-align: center;
+            font-size: 18px;
+            border-top: 3px solid #fff9c4; /* Light Yellow border */
+        }
+
+        footer a {
+            color: #fff9c4; /* Light Yellow */
+            font-weight: 500;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        /* Media Queries for Responsiveness */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 36px;
+            }
+
+            .about p {
+                font-size: 18px;
+                padding: 0 10px;
+            }
+
+            .projects {
+                padding: 50px 20px;
+            }
+
+            .project {
+                width: 100%;
+                margin-bottom: 30px;
+            }
+
+            nav ul {
+                display: none; /* Hide links for smaller screens */
+            }
+
+            nav ul.active {
+                display: flex; /* Show links when menu is active */
+                flex-direction: column;
+                background-color: #6a1b9a; /* Deep Purple */
+                position: absolute;
+                top: 60px;
+                left: 0;
+                width: 100%;
+                padding: 10px;
+            }
+
+            nav ul li {
+                margin: 10px 0;
+                text-align: center;
+            }
+
+            nav ul li a {
+                font-size: 22px;
+            }
+
+            nav .menu-toggle {
+                display: block;
+                cursor: pointer;
+                font-size: 30px;
+                color: white;
+            }
+        }
     </style>
 </head>
 <body>
-    <div>
-        <h2>Nisha patel</h2>
-        <h2>Digital Computing®-SDITS</h2>
+
+<nav>
+    <div class="logo">Nisha Patel</div>
+    <ul id="navLinks">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+    <div class="menu-toggle" id="menuToggle">&#9776;</div>
+</nav>
+
+<header>
+    <h1>Hii! i am Nisha patel</h1>
+    <p>I am a data science student</p>
+</header>
+
+<section class="about" id="about">
+    <h2>About Me</h2>
+    <p>I am Nisha Patel and I am a data science student.& I am learing about web designing.</p>
+   
+</section>
+
+<section class="projects" id="projects">
+    <h2>My Projects</h2>
+
+    <div class="project">
+      <a href="studens_registration_form.html"><img src="student logo.png" alt="Project 1"></a>
+        <h3>student Registation </h3>
+        
     </div>
-    <button><a href="studens_registration_form.html">Student Registation </a></button>
-    <button><a href="Linkedin.html">Linkedin</a></button>
-    <button><a href="inst_login.html">insta</a></button>
-    <button><a href="diwali.html">diwali </a></button>
+
+    <div class="project">
+    <a href="Linkedin.html"><img src="linkedin_img.jpg" alt="Project 2"></a>  
+        <h3> LinkedIn</h3>
+      
+    </div>
+
+    <div class="project">
+      <a href="inst_login.html"><img src="insta.jpg" alt="Project 3"></a>
+        <h3>instagram</h3>
+   
+    </div>
+
+    <div class="project">
+     <a href="diwali.html"><img src="diwali.jpg" alt="Project 3"></a> 
+        <h3>Diwali</h3>
+   
+    </div>
+
+</section>
+
+<footer id="contact">
+    <p>Contact me: <a href="mailto:nishapatel6643@gmail.com">nishapatel6643@gmail.com</a></p>
+    <p>&copy; contact : 12**********</p>
+</footer>
+
+<script>
+    // Toggle mobile menu
+    const menuToggle = document.getElementById('menuToggle');
+    const navLinks = document.getElementById('navLinks');
+
+    menuToggle.addEventListener('click', () => {
+        navLinks.classList.toggle('active');
+    });
+</script>
+
 </body>
 </html>
+
