--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         /* Navbar */
         nav {
-            background-color: #FA0FFA; /* Deep Purple */
+            background-color: #07FA40; /* Deep Purple */
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -170,7 +170,7 @@
 
         /* Footer */
         footer {
-            background-color: #FA0FFA; /* Deep Purple */
+            background-color: #07FA40; /* Deep Purple */
             color: white;
             padding: 20px;
             text-align: center;
