--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!--I am very angry(9201728039)😠😠😠😠😠😡😡😡😡😡😡😡😡😡😡😡😡😡😡😡-->
-
-<!DOCTYPE html> baat kyu nhi kar rhe ho
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
